packages/edxml-test-corpus/edxml_test_corpus-3.0.0.dev2-py3-none-any.whl/edxml_test_corpus/tests/valid/merge-multiple-files/add-concept/expected.edxml
<?xml version="1.0" encoding="UTF-8"?>
<!--
Test if adding a concept works as expected.
-->
<edxml xmlns="http://edxml.org/edxml" version="3.0.0">
  <ontology>
    <objecttypes/>
    <concepts>
      <concept name="a" description="a" display-name-singular="a" display-name-plural="a" version="1"/>
    </concepts>
    <eventtypes/>
    <sources/>
  </ontology>
</edxml>
